k8s/production/metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: chicmoz-prod
spec:
  selector:
    app: metrics
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: http-app
