k8s/production/metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-metrics
  namespace: chicmoz-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /_external/$2
    nginx.ingress.kubernetes.io/limit-rps: "100"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: metrics
                port:
                  name: http-app
            path: /metrics(/|$)(.*)
            pathType: Prefix
status:
  loadBalancer: {}
